--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -19,7 +19,7 @@
                         <div id="progressBar_{{ assignment.id }}" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="text-right ml-auto mt-2">
-                        <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-outline-success">See more</a>
+                        <a href="{% url 'assignment_details' name=assignment.name %}?source=assignments" class="btn btn-outline-success">See more</a>
                     </div>
                 </div>
             </div>
