--- a/templates/reminders.html
+++ b/templates/reminders.html
@@ -40,10 +40,10 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ reminder.name }}</h5>
                             <p class="card-text">{{ reminder.description }}</p>
-                            <p class="card-text">{{ reminder.course }}</p>
+                            <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
                         </div>
                         <div class="text-right ml-auto">
-                            <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-outline-success mb-2 mr-2">See more</a>
+                            <a href="{% url 'reminder_details' name=reminder.name %}?source=reminders" class="btn btn-outline-success mb-2 mr-2">See more</a>
                         </div>
                         <div class="card-footer">
                             {% if reminder.time_remaining == "Reminder Expired" %}
