--- a/templates/about.html
+++ b/templates/about.html
@@ -6,11 +6,12 @@
 
 {% block content %}
 
-        <div class="container mt-4 primary-text">
+    <div class="container mt-4 primary-text">
         <div class="jumbotron text-center" style="background-color:#FDC642;">
             <h1 class="display-4">About Us</h1>
             <p class="lead">
-                Welcome to Study Companion, your ultimate academic companion designed to elevate your learning experience.
+                Welcome to Study Companion, your ultimate academic companion designed to elevate your learning
+                experience.
             </p>
         </div>
 
@@ -19,8 +20,10 @@
                 <div class="p-4 bg-light rounded shadow">
                     <h2 class="mb-3" style="color: #4445A3">Our Mission</h2>
                     <p>
-                        At Study Companion, we strive to create a comprehensive and user-friendly platform that simplifies
-                        academic management. Our mission is to equip students with the tools they need to stay organized,
+                        At Study Companion, we strive to create a comprehensive and user-friendly platform that
+                        simplifies
+                        academic management. Our mission is to equip students with the tools they need to stay
+                        organized,
                         collaborate effectively, and excel in their studies.
                     </p>
                 </div>
@@ -29,8 +32,10 @@
                 <div class="p-4 bg-light rounded shadow">
                     <h2 class="mb-3" style="color: #4445A3">Our Vision</h2>
                     <p>
-                        Our vision is to revolutionize the way students approach their learning experience. We envision a
-                        world where academic success is accessible to all, and our app serves as a catalyst for knowledge
+                        Our vision is to revolutionize the way students approach their learning experience. We envision
+                        a
+                        world where academic success is accessible to all, and our app serves as a catalyst for
+                        knowledge
                         sharing, collaboration, and personal growth.
                     </p>
                 </div>
