--- a/templates/ask_question.html
+++ b/templates/ask_question.html
@@ -5,22 +5,27 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <a href="{% url 'group_study' %}" class="btn btn-outline-secondary">Go Back</a>
-    <div class="mx-auto" style="max-width: 600px">
-        <h1 class="text-center primary-text mb-5">Ask a Question</h1>
-        <form method="post" style="max-width: 400px" class="mx-auto">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <div class="row">
-                <div class="col-md-6 text-left">
-                    <a href="{% url 'group_study' %}" class="btn btn-secondary mt-2">Cancel</a>
-                </div>
-                <div class="col-md-6 text-right">
-                    <input type="submit" value="Post" class="btn btn-primary mt-2">
-                </div>
+    {% if user.is_authenticated %}
+        <div class="container">
+            <a href="{% url 'group_study' %}" class="btn btn-outline-secondary">Go Back</a>
+            <div class="mx-auto" style="max-width: 600px">
+                <h1 class="text-center primary-text mb-5">Ask a Question</h1>
+                <form method="post" style="max-width: 400px" class="mx-auto">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div class="row">
+                        <div class="col-md-6 text-left">
+                            <a href="{% url 'group_study' %}" class="btn btn-secondary mt-2">Cancel</a>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <input type="submit" value="Post" class="btn btn-primary mt-2">
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
-    </div>
-</div>
+        </div>
+
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 {% endblock %}
