--- a/templates/assignment_details.html
+++ b/templates/assignment_details.html
@@ -5,30 +5,34 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="container">
-        <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'assignments' %}{% endif %}" class="btn btn-outline-secondary">Go Back</a>
-        <div class="card border-info mb-3 mx-auto" style="max-width: 700px">
-              <div class="card-header">
+    {% if user.is_authenticated %}
+        <div class="container">
+            <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'assignments' %}{% endif %}"
+               class="btn btn-outline-secondary">Go Back</a>
+            <div class="card border-info mb-3 mx-auto" style="max-width: 700px">
+                <div class="card-header">
                     <h3 class="card-title text-info">{{ assignment.name }}</h3>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Description of your assignment: {{ assignment.description }}</p>
-                <p class="card-text">Course:{{ assignment.course }}</p>
-                <p class="card-text">Assignment progress: {{ assignment.progress }}</p>
-                <p class="card-text">Due date: {{ assignment.due_date }}</p>
-                <p class="card-text">Made by user: {{ assignment.user }}</p>
-                  <div class="d-flex mt-3">
-                      <div class="text-left">
-                          <a href="{% url 'delete_assignment' name=assignment.name %}" class="btn btn-danger">Delete</a>
-                      </div>
-                      <div class="text-right ml-auto">
-                          <a href="{% url 'edit_assignment' assignment.name %}" class="btn btn-outline-dark">Edit</a>
-                      </div>
-                  </div>
-              </div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Description of your assignment: {{ assignment.description }}</p>
+                    <p class="card-text">Course:{{ assignment.course }}</p>
+                    <p class="card-text">Assignment progress: {{ assignment.progress }}</p>
+                    <p class="card-text">Due date: {{ assignment.due_date }}</p>
+                    <p class="card-text">Made by user: {{ assignment.user }}</p>
+                    <div class="d-flex mt-3">
+                        <div class="text-left">
+                            <a href="{% url 'delete_assignment' name=assignment.name %}"
+                               class="btn btn-danger">Delete</a>
+                        </div>
+                        <div class="text-right ml-auto">
+                            <a href="{% url 'edit_assignment' assignment.name %}" class="btn btn-outline-dark">Edit</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
-
-    </div>
-
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 {% endblock %}
