--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -1,72 +1,82 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="text-center my-5">
-        <h1 class="primary-text"> My Assignments </h1>
-    </div>
 
-<div class="mx-5 px-4">
-    <div class="row">
-        {% for assignment in assignments %}
-        <div class="col-md-4 mb-4">
-            <div class="card navcolor-border">
-                <h4 class="card-header navcolor text-white">{{ assignment.name }}</h4>
-                <div class="card-body">
-                    <h5 class="card-title">{{ assignment.course }}</h5>
-                    <p class="card-text">Due Date: {{ assignment.due_date }}</p>
-                    <p class="card-text">{{ assignment.description }}</p>
-                    <div class="progress">
-                        <div id="progressBar_{{ assignment.id }}" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="text-right ml-auto mt-2">
-                        <a href="{% url 'assignment_details' name=assignment.name %}?source=assignments" class="btn btn-outline-success">See more</a>
-                    </div>
+    {% if user.is_authenticated %}
+
+        <div>
+            <div class="text-center my-5">
+                <h1 class="primary-text"> My Assignments </h1>
+            </div>
+
+
+            <div class="mx-5 px-4">
+
+                <a href="{% url 'add_assignment_task' %}" class="btn btn-primary mb-4">Add New Assignment</a>
+
+                <div class="row">
+                    {% for assignment in assignments %}
+                        <div class="col-md-4 mb-4">
+                            <div class="card navcolor-border">
+                                <h4 class="card-header navcolor text-white">{{ assignment.name }}</h4>
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ assignment.course }}</h5>
+                                    <p class="card-text">Due Date: {{ assignment.due_date }}</p>
+                                    <p class="card-text">{{ assignment.description }}</p>
+                                    <div class="progress">
+                                        <div id="progressBar_{{ assignment.id }}"
+                                             class="progress-bar progress-bar-striped"
+                                             role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+                                             aria-valuemax="100"></div>
+                                    </div>
+                                    <div class="text-right">
+                                        <a href="{% url 'assignment_details' name=assignment.name %}"
+                                           class="btn btn-link">See
+                                            more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <script>
+                            function updateProgressBar(progress, progressBarId) {
+                                // Multiply the progress value by 10
+                                var percentage = progress * 10;
+
+                                // Set the width of the progress bar
+                                var progressBar = document.getElementById(progressBarId);
+                                progressBar.style.width = percentage + '%';
+                                progressBar.innerHTML = percentage + '%';
+
+                                // Update the aria-valuenow attribute
+                                progressBar.setAttribute('aria-valuenow', percentage);
+
+                                // Add custom color class based on the progress value
+                                if (percentage < 25) {
+                                    progressBar.classList.add('bg-danger');
+                                } else if (percentage < 50) {
+                                    progressBar.classList.add('bg-warning');
+                                } else if (percentage < 75) {
+                                    progressBar.classList.add('bg-primary');
+                                } else {
+                                    progressBar.classList.add('bg-success');
+                                }
+                            }
+
+                            // Example usage: Call the function with the progress value
+                            var progressValue_{{ assignment.id }} = {{ assignment.progress }};
+                            updateProgressBar(progressValue_{{ assignment.id }}, 'progressBar_{{ assignment.id }}');
+                        </script>
+
+                    {% endfor %}
                 </div>
             </div>
+
         </div>
 
-        <script>
-            function updateProgressBar(progress, progressBarId) {
-                // Multiply the progress value by 10
-                var percentage = progress * 10;
-
-                // Set the width of the progress bar
-                var progressBar = document.getElementById(progressBarId);
-                progressBar.style.width = percentage + '%';
-
-                // Update the aria-valuenow attribute
-                progressBar.setAttribute('aria-valuenow', percentage);
-
-                // Add custom color class based on the progress value
-                if (percentage < 25) {
-                    progressBar.classList.add('bg-danger');
-                } else if (percentage < 50) {
-                    progressBar.classList.add('bg-warning');
-                } else if (percentage < 75) {
-                    progressBar.classList.add('bg-primary');
-                } else {
-                    progressBar.classList.add('bg-success');
-                }
-            }
-
-            // Example usage: Call the function with the progress value
-            var progressValue_{{ assignment.id }} = {{ assignment.progress }};
-            updateProgressBar(progressValue_{{ assignment.id }}, 'progressBar_{{ assignment.id }}');
-        </script>
-
-        {% endfor %}
-    </div>
-</div>
-
-
-
-
-
-
-    <div class="row text-center mx-auto" style="max-width: 300px">
-        <a href="{% url 'add_assignment_task' %}" class="btn btn-primary mx-5 px-4">Add New Assignment</a>
-    </div>
-
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 
 
 {% endblock %}
