--- a/templates/edit_reminder.html
+++ b/templates/edit_reminder.html
@@ -5,15 +5,19 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-    <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-outline-secondary">Go Back</a>
-        <h1 class="text-center primary-text my-5">Edit Reminder</h1>
-        <form method="post" style="max-width: 400px" class="mx-auto">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <div class="text-right">
-                <input type="submit" value="Save" class="btn btn-primary mt-2">
-            </div>
-        </form>
-    </div>
+    {% if user.is_authenticated %}
+        <div class="container">
+            <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-outline-secondary">Go Back</a>
+            <h1 class="text-center primary-text my-5">Edit Reminder</h1>
+            <form method="post" style="max-width: 400px" class="mx-auto">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="text-right">
+                    <input type="submit" value="Save" class="btn btn-primary mt-2">
+                </div>
+            </form>
+        </div>
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 {% endblock %}
