--- a/templates/reminder_details.html
+++ b/templates/reminder_details.html
@@ -5,28 +5,32 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="container">
-        <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'reminders' %}{% endif %}" class="btn btn-outline-secondary">Go Back</a>
-        <div class="card border-dark mb-3 mx-auto" style="max-width: 700px">
-              <div class="card-header">
+    {% if user.is_authenticated %}
+        <div class="container">
+            <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'reminders' %}{% endif %}"
+               class="btn btn-outline-secondary">Go Back</a>
+            <div class="card border-dark mb-3 mx-auto" style="max-width: 700px">
+                <div class="card-header">
                     <h3 class="card-title text-dark">{{ reminder.name }}</h3>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Description of your reminder: {{ reminder.description }}</p>
-                <p class="card-text">Course:{{ reminder.course }}</p>
-                <p class="card-text">Deadline: {{ reminder.deadline }}</p>
-                  <div class="d-flex mt-3">
-                      <div class="text-left">
-                          <a href="{% url 'delete_reminder' name=reminder.name %}" class="btn btn-danger">Delete</a>
-                      </div>
-                      <div class="text-right ml-auto">
-                          <a href="{% url 'edit_reminder' reminder.name %}" class="btn btn-outline-dark">Edit</a>
-                      </div>
-                  </div>
-              </div>
-        </div>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">Description of your reminder: {{ reminder.description }}</p>
+                    <p class="card-text">Course:{{ reminder.course }}</p>
+                    <p class="card-text">Deadline: {{ reminder.deadline }}</p>
+                    <div class="d-flex mt-3">
+                        <div class="text-left">
+                            <a href="{% url 'delete_reminder' name=reminder.name %}" class="btn btn-danger">Delete</a>
+                        </div>
+                        <div class="text-right ml-auto">
+                            <a href="{% url 'edit_reminder' reminder.name %}" class="btn btn-outline-dark">Edit</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    </div>
+        </div>
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 
 {% endblock %}
