--- a/templates/reminders.html
+++ b/templates/reminders.html
@@ -1,65 +1,69 @@
-
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="text-center my-5">
-        <h1 class="primary-text"> My Reminders </h1>
-    </div>
-
-    <!-- Updated code with card layout -->
-{#    <div class="mx-5 px-4">#}
-{#        <div class="row">#}
-{#            {% for reminder in reminders %}#}
-{#                <div class="col-md-4 mb-4">#}
-{#                    <div class="card navcolor-border">#}
-{#                        <h4 class="card-header navcolor text-white">{{ reminder.name }}</h4>#}
-{#                        <div class="card-body">#}
-{#                            <h5 class="card-title">{{ reminder.description }}</h5>#}
-{#                            <p class="card-text">{{ reminder.course }}</p>#}
-{#                            <p class="card-text">{{ reminder.deadline }}</p>#}
-{#                            {% if reminder.time_remaining == "Reminder Expired" %}#}
-{#                                <p class="card-text" style="color: #ff001b"><b>Your reminder has expired</b></p>#}
-{#                            {% else %}#}
-{#                                <p class="card-text" style="color: #FDC642">Time remaining: {{ reminder.time_remaining }}</p>#}
-{#                            {% endif %}#}
-{#                                <div class="text-right ml-auto">#}
-{#                                    <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-outline-success">See more</a>#}
-{#                                </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            {% endfor %}#}
-{#        </div>#}
-{#    </div>#}
-
-    <div class="mx-5 px-4">
-        <div class="row">
-            {% for reminder in reminders %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ reminder.name }}</h5>
-                            <p class="card-text">{{ reminder.description }}</p>
-                            <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
-                        </div>
-                        <div class="text-right ml-auto">
-                            <a href="{% url 'reminder_details' name=reminder.name %}?source=reminders" class="btn btn-outline-success mb-2 mr-2">See more</a>
-                        </div>
-                        <div class="card-footer">
-                            {% if reminder.time_remaining == "Reminder Expired" %}
-                                <small class="card-text" style="color: #ff001b"><b>Your reminder has expired</b></small>
-                            {% else %}
-                                <small class="card-text" style="color: #FDC642"><b>Time remaining: {{ reminder.time_remaining }}</b></small>
-                            {% endif %}
+    {% if user.is_authenticated %}
+        <div class="text-center my-5">
+            <h1 class="primary-text"> My Reminders </h1>
+        </div>
+        <!-- Updated code with card layout -->
+        {#    <div class="mx-5 px-4">#}
+        {#        <div class="row">#}
+        {#            {% for reminder in reminders %}#}
+        {#                <div class="col-md-4 mb-4">#}
+        {#                    <div class="card navcolor-border">#}
+        {#                        <h4 class="card-header navcolor text-white">{{ reminder.name }}</h4>#}
+        {#                        <div class="card-body">#}
+        {#                            <h5 class="card-title">{{ reminder.description }}</h5>#}
+        {#                            <p class="card-text">{{ reminder.course }}</p>#}
+        {#                            <p class="card-text">{{ reminder.deadline }}</p>#}
+        {#                            {% if reminder.time_remaining == "Reminder Expired" %}#}
+        {#                                <p class="card-text" style="color: #ff001b"><b>Your reminder has expired</b></p>#}
+        {#                            {% else %}#}
+        {#                                <p class="card-text" style="color: #FDC642">Time remaining: {{ reminder.time_remaining }}</p>#}
+        {#                            {% endif %}#}
+        {#                                <div class="text-right ml-auto">#}
+        {#                                    <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-outline-success">See more</a>#}
+        {#                                </div>#}
+        {#                        </div>#}
+        {#                    </div>#}
+        {#                </div>#}
+        {#            {% endfor %}#}
+        {#        </div>#}
+        {#    </div>#}
+        <div class="mx-5 px-4">
+            <div class="row">
+                {% for reminder in reminders %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ reminder.name }}</h5>
+                                <p class="card-text">{{ reminder.description }}</p>
+                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
+                            </div>
+                            <div class="text-right ml-auto">
+                                <a href="{% url 'reminder_details' name=reminder.name %}?source=reminders"
+                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
+                            </div>
+                            <div class="card-footer">
+                                {% if reminder.time_remaining == "Reminder Expired" %}
+                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
+                                        expired</b></small>
+                                {% else %}
+                                    <small class="card-text" style="color: #FDC642"><b>Time
+                                        remaining: {{ reminder.time_remaining }}</b></small>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
-    </div>
 
-    <div class="row text-center mx-auto" style="max-width: 300px">
-        <a href="{% url 'add_reminder' %}" class="btn btn-primary mx-5 px-4">Add New Reminder</a>
-    </div>
+        <div class="row text-center mx-auto" style="max-width: 300px">
+            <a href="{% url 'add_reminder' %}" class="btn btn-primary mx-5 px-4">Add New Reminder</a>
+        </div>
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 
 {% endblock %}
