--- a/templates/add_assignment_task.html
+++ b/templates/add_assignment_task.html
@@ -1,5 +1,3 @@
-<!-- add_assignment_task.html -->
-
 {% extends "base.html" %}
 
 {% block title %}
@@ -8,25 +6,54 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <div class="container">
-        <div class="mx-auto" style="max-width: 600px">
-        <h1 class="text-center primary-text mb-5">Add New Assignment and Task</h1>
-        <form method="post" style="max-width: 400px" class="mx-auto">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div class="row">
-            <div class="col-md-6 text-left">
-                <a href="{% url 'assignments' %}" class="btn btn-secondary mt-2">Cancel</a>
+        <div class="container mt-4">
+            <div class="mx-auto" style="max-width: 600px">
+                <h1 class="text-center primary-text mb-5">Add New Assignment and Tasks</h1>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label class="form-label">Name <span class="text-danger">*</span></label>
+                        {{ form.name }}
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Course <span class="text-danger">*</span></label>
+                        {{ form.course }}
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Description <span class="text-danger">*</span></label>
+                        {{ form.description }}
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Progress <span class="text-danger">*</span></label>
+                        {{ form.progress }}
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Due Date <span class="text-danger">*</span></label>
+                        {{ form.due_date }}
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Tasks (one per line): <span class="text-danger">*</span></label>
+                        <textarea name="tasks" class="form-control" rows="3">{{ form.tasks.value }}</textarea>
+                    </div>
+                    <div class="mb-3"> <span class="text-danger">All fields are required.</span></div>
+                    <div class="row">
+                        <div class="col-md-6 text-left">
+                            <a href="{% url 'assignments' %}" class="btn btn-secondary mt-2">Cancel</a>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <input type="submit" value="Save" class="btn btn-primary mt-2">
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="col-md-6 text-right">
-                <input type="submit" value="Save" class="btn btn-primary mt-2">
-            </div>
-        </div>
-        </form>
-        </div>
         </div>
     {% else %}
         {% include "unauthenticated_message.html" %}
     {% endif %}
-
 {% endblock %}
+
+
+
+
+
+
