--- a/templates/assignment_details.html
+++ b/templates/assignment_details.html
@@ -15,10 +15,24 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">Description of your assignment: {{ assignment.description }}</p>
-                    <p class="card-text">Course:{{ assignment.course }}</p>
+                    <p class="card-text">Course: {{ assignment.course }}</p>
                     <p class="card-text">Assignment progress: {{ assignment.progress }}</p>
-                    <p class="card-text">Due date: {{ assignment.due_date }}</p>
-                    <p class="card-text">Made by user: {{ assignment.user }}</p>
+                    <h5 class="card-text">Due date: {{ assignment.due_date }}</h5>
+                    <h6 class="mt-3">Tasks:</h6>
+                        <ul class="list-group">
+                            {% for task in tasks %}
+                                {% if task.assignment == assignment %}
+                                <li class="list-group-item">
+                                <a href="{% url 'task_details' task_name=task.name %}">
+                                                        {{ task.name }}</a> -
+                                    <span class="{% if task.is_finished %}text-success{% else %}text-danger{% endif %}">
+                                {% if task.is_finished %}Finished{% else %}Not Finished{% endif %}
+                                    </span>
+                                </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+{#                    <p class="card-text">Made by user: {{ assignment.user }}</p>#}
                     <div class="d-flex mt-3">
                         <div class="text-left">
                             <a href="{% url 'delete_assignment' name=assignment.name %}"
