--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -5,10 +5,17 @@
     {% if user.is_authenticated %}
 
         <div>
-            <div class="text-center my-5">
+            <div class="text-center my-3">
                 <h1 class="primary-text"> My Assignments </h1>
             </div>
 
+        <div class="row text-center mx-auto py-4" style="max-width: 300px">
+            <a href="{% url 'add_assignment_task' %}" class="btn btn-primary px-4">Add New Assignment</a>
+        </div>
+
+        <div class="row text-center mx-auto py-4" style="max-width: 300px">
+            <a href="{% url 'add_task' %}" class="btn btn-primary px-4">Add New Task</a>
+        </div>
 
             <div class="mx-5 px-4">
 
@@ -18,8 +25,8 @@
                             <div class="card navcolor-border">
                                 <h4 class="card-header navcolor text-white">{{ assignment.name }}</h4>
                                 <div class="card-body">
-                                    <h5 class="card-title">{{ assignment.course }}</h5>
-                                    <p class="card-text">Due Date: {{ assignment.due_date }}</p>
+                                    <h5 class="card-title">Due Date: {{ assignment.due_date }}</h5>
+                                    <p class="card-text">Course: {{ assignment.course }}</p>
                                     <p class="card-text">{{ assignment.description }}</p>
                                     <div class="progress">
                                         <div id="progressBar_{{ assignment.id }}"
@@ -27,6 +34,20 @@
                                              role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
                                              aria-valuemax="100"></div>
                                     </div>
+                                    <h5 class="mt-3">Tasks:</h5>
+                                        <ul class="list-group">
+                                            {% for task in tasks %}
+                                                {% if task.assignment == assignment %}
+                                                <li class="list-group-item">
+                                                    <a href="{% url 'task_details' task_name=task.name %}">
+                                                        {{ task.name }}</a> -
+                                                    <span class="{% if task.is_finished %}text-success{% else %}text-danger{% endif %}">
+                                                        {% if task.is_finished %}Finished{% else %}Not Finished{% endif %}
+                                                    </span>
+                                                </li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ul>
                                     <div class="text-right">
                                         <a href="{% url 'assignment_details' name=assignment.name %}"
                                            class="btn btn-outline-success mt-2">See
@@ -68,9 +89,7 @@
 
                     {% endfor %}
                 </div>
-                <div class="row text-center mx-auto" style="max-width: 300px">
-                    <a href="{% url 'add_assignment_task' %}" class="btn btn-primary mx-5 px-4">Add New Assignment</a>
-                </div>
+
             </div>
 
         </div>
