--- a/templates/reminder_details.html
+++ b/templates/reminder_details.html
@@ -11,12 +11,12 @@
                class="btn btn-outline-secondary">Go Back</a>
             <div class="card border-dark mb-3 mx-auto" style="max-width: 700px">
                 <div class="card-header">
-                    <h3 class="card-title text-dark">{{ reminder.name }}</h3>
+                    <h3 class="card-title text-success">{{ reminder.name }}</h3>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Description of your reminder: {{ reminder.description }}</p>
-                    <p class="card-text">Course:{{ reminder.course }}</p>
-                    <p class="card-text">Deadline: {{ reminder.deadline }}</p>
+                    <p class="card-text">Course: {{ reminder.course }}</p>
+                    <h5 class="card-text">Deadline: {{ reminder.deadline }}</h5>
                     <div class="d-flex mt-3">
                         <div class="text-left">
                             <a href="{% url 'delete_reminder' name=reminder.name %}" class="btn btn-danger">Delete</a>
