added id field in assignment and reminder

--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -49,7 +49,7 @@
                                             {% endfor %}
                                         </ul>
                                     <div class="text-right">
-                                        <a href="{% url 'assignment_details' name=assignment.name %}"
+                                        <a href="{% url 'assignment_details' name=assignment.id %}"
                                            class="btn btn-outline-success mt-2">See
                                             more</a>
                                     </div>
