--- a/templates/assignment_details.html
+++ b/templates/assignment_details.html
@@ -35,11 +35,11 @@
 {#                    <p class="card-text">Made by user: {{ assignment.user }}</p>#}
                     <div class="d-flex mt-3">
                         <div class="text-left">
-                            <a href="{% url 'delete_assignment' name=assignment.name %}"
+                            <a href="{% url 'delete_assignment' name=assignment.id %}"
                                class="btn btn-danger">Delete</a>
                         </div>
                         <div class="text-right ml-auto">
-                            <a href="{% url 'edit_assignment' assignment.name %}" class="btn btn-outline-dark">Edit</a>
+                            <a href="{% url 'edit_assignment' assignment.id %}" class="btn btn-outline-dark">Edit</a>
                         </div>
                     </div>
                 </div>
