--- a/templates/delete_assignment.html
+++ b/templates/delete_assignment.html
@@ -15,7 +15,7 @@
                 {% csrf_token %}
                 <div class="text-center">
                     <button type="submit" class="btn btn-danger">Delete</button>
-                    <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-secondary">Cancel</a>
+                    <a href="{% url 'assignment_details' name=assignment.id %}" class="btn btn-secondary">Cancel</a>
                 </div>
             </form>
         </div>
