--- a/templates/edit_assignment.html
+++ b/templates/edit_assignment.html
@@ -7,7 +7,7 @@
 {% block content %}
     {% if user.is_authenticated %}
         <div class="container">
-            <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-outline-secondary">Go Back</a>
+            <a href="{% url 'assignment_details' name=assignment.id %}" class="btn btn-outline-secondary">Go Back</a>
             <h1 class="text-center primary-text my-5">Edit Assignment</h1>
             <form method="post" style="max-width: 400px" class="mx-auto">
                 {% csrf_token %}
