--- a/templates/reminder_details.html
+++ b/templates/reminder_details.html
@@ -19,10 +19,10 @@
                     <h5 class="card-text">Deadline: {{ reminder.deadline }}</h5>
                     <div class="d-flex mt-3">
                         <div class="text-left">
-                            <a href="{% url 'delete_reminder' name=reminder.name %}" class="btn btn-danger">Delete</a>
+                            <a href="{% url 'delete_reminder' name=reminder.id %}" class="btn btn-danger">Delete</a>
                         </div>
                         <div class="text-right ml-auto">
-                            <a href="{% url 'edit_reminder' reminder.name %}" class="btn btn-outline-dark">Edit</a>
+                            <a href="{% url 'edit_reminder' reminder.id %}" class="btn btn-outline-dark">Edit</a>
                         </div>
                     </div>
                 </div>
