--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -6,8 +6,7 @@
 
 {% block content %}
     <div class="container">
-    <a href="{% url 'assignments' %}"
-               class="btn btn-outline-secondary">Go Back</a>
+
         <h1 class="text-center primary-text my-5">Add New Task</h1>
         <form method="post" style="max-width: 400px" class="mx-auto">
             {% csrf_token %}
@@ -22,8 +21,13 @@
 
             <p class="text-success mt-4">When you add a Task, by default it is not finished. When you finish it
                 and want to change that you can do so by editing the task. :)</p>
-            <div class="text-right">
-                <input type="submit" value="Add Task" class="btn btn-primary mt-2">
+            <div class="row">
+                <div class="col-md-6 text-left">
+                    <a href="{% url 'assignments' %}" class="btn btn-secondary mt-2">Cancel</a>
+                </div>
+                <div class="col-md-6 text-right">
+                    <input type="submit" value="Save" class="btn btn-primary mt-2">
+                </div>
             </div>
         </form>
     </div>
