--- a/templates/edit_reminder.html
+++ b/templates/edit_reminder.html
@@ -11,12 +11,40 @@
             <h1 class="text-center primary-text my-5">Edit Reminder</h1>
             <form method="post" style="max-width: 400px" class="mx-auto">
                 {% csrf_token %}
-                {{ form.as_p }}
+                <div class="mb-3">
+                    <label class="form-label">Name <span class="text-danger">*</span></label>
+                    {{ form.name }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Description <span class="text-danger">*</span></label>
+                    {{ form.description }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Course <span class="text-danger">*</span></label>
+                    {{ form.course }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Deadline <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline" required>
+                </div>
                 <div class="text-right">
                     <input type="submit" value="Save" class="btn btn-primary mt-2">
                 </div>
             </form>
         </div>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                flatpickr(".datetimepicker", {
+                    enableTime: true,
+                    dateFormat: "Y-m-d H:i",
+                    minDate: "today",
+                    defaultHour: 12,
+                    defaultMinute: 0,
+                });
+            });
+        </script>
+
     {% else %}
         {% include "unauthenticated_message.html" %}
     {% endif %}
